Bug 148575 - newline \n does not work with --radiolist
Summary: newline \n does not work with --radiolist
Status: RESOLVED FIXED
Alias: None
Product: kdialog
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Brad Hards
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-06 14:23 UTC by Loris Boillet
Modified: 2012-07-02 14:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
Proposed patch (1.19 KB, patch)
2009-05-18 01:24 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Loris Boillet 2007-08-06 14:23:39 UTC
Version:           1.0 (using KDE KDE 3.5.5)
Installed from:    Debian stable Packages
OS:                Linux

\n is not interpreted with --radiolist option, neither with --checklist.

this command works well (an empty line between "line 1" and "line 2"): 
kdialog --msgbox "line 1 \n line 2" 

but not this one (prints "line 1 \n line 2" on the same line):
kdialog --radiolist "line 1 \n line 2" 1 choice1 on 2 choice2 off
Comment 1 Tristan Miller 2008-11-17 17:31:07 UTC
This bug also occurs with --inputbox.  The code

kdialog --msgbox "foo\nbar"

works as expected, but

kdialog --inputbox "foo\nbar"

does not.  I'm using KDialog 1.0 on KDE 4.1.3.
Comment 2 Dario Andres 2009-05-18 01:24:41 UTC
Created attachment 33780 [details]
Proposed patch
Comment 3 Pino Toscano 2009-07-06 00:37:13 UTC
*** Bug 199005 has been marked as a duplicate of this bug. ***
Comment 4 Andreas Stangl 2009-07-06 08:08:13 UTC
You could use "<br>" instead of "\n". Kdialog 1.0 is able to interpret html tags
Comment 5 Oswald Buddenhagen 2012-07-01 11:20:30 UTC
Git commit 39f3b6a8b7d3e5261ab24a5a270350891a0caa06 by Oswald Buddenhagen.
Committed on 01/07/2012 at 13:14.
Pushed by ossi into branch 'master'.

interpret backslash escapes in some more options
Related: bug 295820
FIXED-IN: 4.9

M  +14   -14   kdialog/kdialog.cpp

http://commits.kde.org/kde-baseapps/39f3b6a8b7d3e5261ab24a5a270350891a0caa06
Comment 6 Christoph Feck 2012-07-02 14:48:39 UTC
Git commit 36733fdcc1242a15374672b6e39e906bb131b958 by Christoph Feck, on behalf of Oswald Buddenhagen.
Committed on 01/07/2012 at 13:14.
Pushed by cfeck into branch 'KDE/4.9'.

interpret backslash escapes in some more options
Related: bug 295820
FIXED-IN: 4.9
(cherry picked from commit 39f3b6a8b7d3e5261ab24a5a270350891a0caa06)

M  +14   -14   kdialog/kdialog.cpp

http://commits.kde.org/kde-baseapps/36733fdcc1242a15374672b6e39e906bb131b958