interpret backslash escapes in some more options

BUG: 148575
BUG: 295820
FIXED-IN: 4.9
(cherry picked from commit 39f3b6a8b7d3e5261ab24a5a270350891a0caa06)